# gogoshogi

./: Action.c  Action.h  Board.c  Board.h  CMakeLists.txt  Game.c  Game.h  Hash.c  Hash.h  Heap.c  Heap.h  MultiThread.c  MultiThread.h  README.md  Tree.c  Tree.h  actions.c  all_actions.c  eijirou_memo.txt  gamedef.c  gamedef.h  gameutils.c  main.c  main_sample.c  main_sample.txt  memo_eijirou.txt  montecarlo.c  possible_actions.c  pull_request_test.txt  メモ_eijirou.txt
OLD/: beam_search.c  gamedef.c  minimax.c  nn_360_128x2_0.txt  nn_360_128x2_1.txt  nn_585_32x2_0.txt  nn_585_64x2_0.txt  nn_func.c  possible_actions.c
OLD/weights/: nn_128x2_0.txt  nn_128x2_1.txt  nn_128x2_6.txt  nn_128x3_0.txt  nn_128x3_3.txt  nn_128x3_4.txt  nn_32x2_0.txt  nn_32x2_1.txt  nn_32x2_3.txt  nn_361_128x3_1.txt  nn_361_128x3_2.txt
memo/: draft.md  memo_eijirou.txt  test_data.txt  メモ_eijirou.txt
neural_network/: CMakeLists.txt  beam_search.c  checkmates118196.txt  dataset_creator.c  hash.c  initial_boards_48245.txt  layers.c  league_match.c  main.c  mathmatical_functions.c  minimax.c  mnist.c  model.dot  neural_network.c  neural_network.h  nn_128x2_64x2_32x2_0.txt  nn_128x2_64x2_32x2_1.txt  nn_128x2_64x2_32x2_2.txt  nn_32x2_0.txt  nn_32x2_1.txt  nn_360_128x2_1.txt  nn_361_128x2_2.txt  nn_361_128x2_3.txt  nn_361_128x2_4.txt  nn_361_128x2_5.txt  nn_361_128x2_7.txt  nn_361_32x2_0.txt  nn_361_32x2_1.txt  nn_361_32x2_2.txt  nn_585_32x2_1.txt  nn_64x2_0.txt  nn_64x2_1.txt  nn_main.c  nn_shogi.c  random_move.c  train.c  tree1.dot  tree2.dot  tree3.dot  weights535.txt  (+3 more)
